--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="CSS/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="/frontend/CSS/styles.css">
 </head>
 <body>
     <div id="particles-js"></div>
     <div class="content">
         <h1>Login</h1>
         <form class="login-form">
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
+            <input id="email" type="email" placeholder="Email" required autocomplete="on">
+            <input id="password" type="password" placeholder="Password" required>
             <div class="buttons">
                 <button class="btn login" type="submit">Login</button>
                 <button class="btn signup" type="button">Sign Up</button>
@@ -20,6 +21,7 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="javascript/animation.js"></script>
+    <script src="/frontend/javascript/animation.js"></script>
+    <script src="/frontend/javascript/communication.js"></script>
 </body>
 </html>
