Implementing refresh-token api endpoint

--- a/frontend/HTML/login.html
+++ b/frontend/HTML/login.html
@@ -15,8 +15,8 @@
             <input id="email" type="email" placeholder="Email" required autocomplete="on">
             <input id="password" type="password" placeholder="Password" required>
             <div class="buttons">
-                <button class="btn login" type="submit">Login</button>
-                <button class="btn signup" type="button">Sign Up</button>
+                <button id="login " class="btn login" type="submit">Login</button>
+                <button id="signup" class="btn signup" type="button">Sign Up</button>
             </div>
         </form>
     </div>
